--- a/.classpath
+++ b/.classpath
@@ -26,7 +26,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -37,6 +36,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
-	<classpathentry kind="lib" path="C:/NCS/Download/오라클 SQL developer/jdbc/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/NCS/download/apache-tomcat-9.0.65/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/NCS/download/apache-tomcat-9.0.65/bin/bootstrap.jar"/>
+	<classpathentry kind="lib" path="C:/NCS/download/apache-tomcat-9.0.65/bin/tomcat-juli.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
