--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,4 +56,14 @@
 		<!-- .do 앞에 뭐가 오든 인코딩 필터 설정 작업해주겠다는 의미 -->
 		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
+	
+	<!-- MultipartFilter -->
+	<filter>
+		<filter-name>MultipartFilter</filter-name>
+	    <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>MultipartFilter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
