[ADD]메신저 관련 파일 생성

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -80,11 +80,12 @@
 		
 		<!-- 파일 업로드 설정 -->
 		<multipart-config>
-			<location>C:/Users/user/Desktop/Github_desktop/COWORK/src/main/webapp/resources/address</location>
+			<location>C:\Users\user\AppData\Local\Temp\</location>
 			<max-file-size>20971520</max-file-size> 
 			<max-request-size>41943040</max-request-size> 
 			<file-size-threshold>20971520</file-size-threshold> 
 		</multipart-config> 
+		
 	</servlet>
 	
 </web-app>
