--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,6 +77,9 @@
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
+		
+		<!-- 웹소켓을 위한 비동기 설정 -->
+		<async-supported>true</async-supported>
  		
 		<!-- 파일 업로드 설정 -->
 		<multipart-config>
