--- a/.classpath
+++ b/.classpath
@@ -24,7 +24,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -39,5 +39,6 @@
 	<classpathentry kind="lib" path="C:/NCS/download/apache-tomcat-9.0.65/lib/ojdbc8.jar"/>
 	<classpathentry kind="lib" path="C:/NCS/download/apache-tomcat-9.0.65/bin/bootstrap.jar"/>
 	<classpathentry kind="lib" path="C:/NCS/download/apache-tomcat-9.0.65/bin/tomcat-juli.jar"/>
+	<classpathentry kind="lib" path="C:/NCS/download/apache-tomcat-9.0.65/lib/catalina.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
