--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -69,8 +69,8 @@
 	
 	
 	<!--주소록 파일업로드 설정 -->
-	<!--<servlet>
-
+	<servlet>
+		
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -79,10 +79,11 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 
-		&lt;!&ndash;  웹소켓을 위한 비동기 설정 &ndash;&gt;
+		<!--  웹소켓을 위한 비동기 설정 -->
 		<async-supported>true</async-supported>
 
-		&lt;!&ndash; 파일 업로드 설정 &ndash;&gt;
+		<!-- 파일 업로드 설정 -->
+		
 		 <multipart-config>
 			<!-- <location>C:/Users/user/Desktop/Github_desktop/COWORK/src/main/webapp/resources/address</location> -->
 			<max-file-size>20971520</max-file-size> 
@@ -90,6 +91,6 @@
 			<file-size-threshold>20971520</file-size-threshold> 
 		</multipart-config> 
   	
-	</servlet>-->
+	</servlet>
 	
 </web-app>
