--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -85,7 +85,7 @@
 		<!-- 파일 업로드 설정 -->
 		
 		 <multipart-config>
-			 <location>C:/Users/user/Desktop/Github_desktop/COWORK/src/main/webapp/resources/address</location>
+			 <!-- <location>C:/Users/user/Desktop/Github_desktop/COWORK/src/main/webapp/resources/address</location> -->
 			<max-file-size>20971520</max-file-size> 
 			<max-request-size>41943040</max-request-size> 
 			<file-size-threshold>20971520</file-size-threshold> 
